Recorded the IDE decisions for the module split
Two tooling questions came up while reviewing phase 5 and are worth recording
so they are not reopened: whether to do the split in IntelliJ, and whether to
split into three Eclipse projects first.

IntelliJ genuinely handles multi-module Maven better than m2e does, but JDT's
null analysis is Eclipse-only and is the sole place the @NonNullByDefault
discipline is checked, so Eclipse stays. The Eclipse-side friction is better
addressed by the module-info decision than by changing IDE.

The three-Eclipse-projects idea is dominated: m2e regenerates .classpath from
the pom, and the part of the work it would front-load is the package move,
after which the Maven split is the cheap remainder. Also recorded the outcome
of the import scan that motivated skipping a standing architecture test - the
boundary is already clean apart from the deferred shims.